hphp/hack/test/typecheck/reactive/unset_rx6.php.coeffects.exp
File "unset_rx6.php", line 12, characters 9-18:
Non-mutable argument for `unset` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "unset_rx6.php", line 10, characters 30-31:
  The local (enclosing) context provides the capability set {}
